--- a/r5dev/vproj/clientsdk.vcxproj
+++ b/r5dev/vproj/clientsdk.vcxproj
@@ -132,6 +132,7 @@
     <ClInclude Include="..\core\r5dev.h" />
     <ClInclude Include="..\core\stdafx.h" />
     <ClInclude Include="..\core\termutil.h" />
+    <ClInclude Include="..\datacache\idatacache.h" />
     <ClInclude Include="..\datacache\imdlcache.h" />
     <ClInclude Include="..\datacache\mdlcache.h" />
     <ClInclude Include="..\ebisusdk\EbisuSDK.h" />
@@ -199,7 +200,6 @@
     <ClInclude Include="..\public\include\bansystem.h" />
     <ClInclude Include="..\public\include\binstream.h" />
     <ClInclude Include="..\public\include\httplib.h" />
-    <ClInclude Include="..\public\include\json.hpp" />
     <ClInclude Include="..\public\include\model_types.h" />
     <ClInclude Include="..\public\include\module.h" />
     <ClInclude Include="..\public\include\stb_image.h" />
@@ -258,6 +258,46 @@
     <ClInclude Include="..\thirdparty\lzham\lzhamcomp\lzham_lzcomp_internal.h" />
     <ClInclude Include="..\thirdparty\lzham\lzhamdecomp\lzham_decomp.h" />
     <ClInclude Include="..\thirdparty\lzham\lzhamdecomp\lzham_lzdecompbase.h" />
+    <ClInclude Include="..\thirdparty\nlohmann\adl_serializer.hpp" />
+    <ClInclude Include="..\thirdparty\nlohmann\byte_container_with_subtype.hpp" />
+    <ClInclude Include="..\thirdparty\nlohmann\detail\conversions\from_json.hpp" />
+    <ClInclude Include="..\thirdparty\nlohmann\detail\conversions\to_chars.hpp" />
+    <ClInclude Include="..\thirdparty\nlohmann\detail\conversions\to_json.hpp" />
+    <ClInclude Include="..\thirdparty\nlohmann\detail\exceptions.hpp" />
+    <ClInclude Include="..\thirdparty\nlohmann\detail\hash.hpp" />
+    <ClInclude Include="..\thirdparty\nlohmann\detail\input\binary_reader.hpp" />
+    <ClInclude Include="..\thirdparty\nlohmann\detail\input\input_adapters.hpp" />
+    <ClInclude Include="..\thirdparty\nlohmann\detail\input\json_sax.hpp" />
+    <ClInclude Include="..\thirdparty\nlohmann\detail\input\lexer.hpp" />
+    <ClInclude Include="..\thirdparty\nlohmann\detail\input\parser.hpp" />
+    <ClInclude Include="..\thirdparty\nlohmann\detail\input\position_t.hpp" />
+    <ClInclude Include="..\thirdparty\nlohmann\detail\iterators\internal_iterator.hpp" />
+    <ClInclude Include="..\thirdparty\nlohmann\detail\iterators\iteration_proxy.hpp" />
+    <ClInclude Include="..\thirdparty\nlohmann\detail\iterators\iterator_traits.hpp" />
+    <ClInclude Include="..\thirdparty\nlohmann\detail\iterators\iter_impl.hpp" />
+    <ClInclude Include="..\thirdparty\nlohmann\detail\iterators\json_reverse_iterator.hpp" />
+    <ClInclude Include="..\thirdparty\nlohmann\detail\iterators\primitive_iterator.hpp" />
+    <ClInclude Include="..\thirdparty\nlohmann\detail\json_pointer.hpp" />
+    <ClInclude Include="..\thirdparty\nlohmann\detail\json_ref.hpp" />
+    <ClInclude Include="..\thirdparty\nlohmann\detail\macro_scope.hpp" />
+    <ClInclude Include="..\thirdparty\nlohmann\detail\macro_unscope.hpp" />
+    <ClInclude Include="..\thirdparty\nlohmann\detail\meta\call_std\begin.hpp" />
+    <ClInclude Include="..\thirdparty\nlohmann\detail\meta\call_std\end.hpp" />
+    <ClInclude Include="..\thirdparty\nlohmann\detail\meta\cpp_future.hpp" />
+    <ClInclude Include="..\thirdparty\nlohmann\detail\meta\detected.hpp" />
+    <ClInclude Include="..\thirdparty\nlohmann\detail\meta\identity_tag.hpp" />
+    <ClInclude Include="..\thirdparty\nlohmann\detail\meta\is_sax.hpp" />
+    <ClInclude Include="..\thirdparty\nlohmann\detail\meta\type_traits.hpp" />
+    <ClInclude Include="..\thirdparty\nlohmann\detail\meta\void_t.hpp" />
+    <ClInclude Include="..\thirdparty\nlohmann\detail\output\binary_writer.hpp" />
+    <ClInclude Include="..\thirdparty\nlohmann\detail\output\output_adapters.hpp" />
+    <ClInclude Include="..\thirdparty\nlohmann\detail\output\serializer.hpp" />
+    <ClInclude Include="..\thirdparty\nlohmann\detail\string_concat.hpp" />
+    <ClInclude Include="..\thirdparty\nlohmann\detail\string_escape.hpp" />
+    <ClInclude Include="..\thirdparty\nlohmann\detail\value_t.hpp" />
+    <ClInclude Include="..\thirdparty\nlohmann\json.hpp" />
+    <ClInclude Include="..\thirdparty\nlohmann\json_fwd.hpp" />
+    <ClInclude Include="..\thirdparty\nlohmann\ordered_map.hpp" />
     <ClInclude Include="..\thirdparty\spdlog\include\async.h" />
     <ClInclude Include="..\thirdparty\spdlog\include\async_logger-inl.h" />
     <ClInclude Include="..\thirdparty\spdlog\include\async_logger.h" />
