--- a/r5dev/vproj/naveditor.vcxproj
+++ b/r5dev/vproj/naveditor.vcxproj
@@ -151,6 +151,10 @@
       <LanguageStandard>stdcpp17</LanguageStandard>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>Pch.h</PrecompiledHeaderFile>
+      <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
+      <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
+      <OmitFramePointers>true</OmitFramePointers>
+      <EnableFiberSafeOptimizations>true</EnableFiberSafeOptimizations>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -159,6 +163,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>$(SolutionDir)lib\$(Configuration)\</AdditionalLibraryDirectories>
       <AdditionalDependencies>librecast_x64.lib;libdtdetour_x64.lib;libdetourcrowd_x64.lib;libdetourtilecache_x64.lib;libdtdebugutils_x64.lib;libsdl2_x64.lib;OpenGL32.lib;Glu32.lib;Gdi32.lib;User32.lib;Shell32.lib;Comdlg32.lib;Kernel32.lib;Winmm.lib;Setupapi.lib;Advapi32.lib;Version.lib;Ole32.lib;Oleaut32.lib;Imm32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <SetChecksum>true</SetChecksum>
     </Link>
     <PostBuildEvent>
       <Command>IF EXIST "$(SolutionDir)..\..\r5apexdata.bin" del "$(SolutionDir)..\..\bin\$(ProjectName).exe" &amp;&amp; copy /Y "$(TargetPath)" "$(SolutionDir)..\..\bin\</Command>
